[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gravity-toolkit"
version = "1.2.4"
description = "Python tools for working with time-variable gravity fields"
keywords = [
    "GRACE",
    "GRACE-FO",
    "Gravity",
    "satellite geodesy",
    "spherical harmonics",
]

authors = [
    {name = "Tyler Sutterley"},
    {name = "Hugo Lecomte"},
    {name = "Yara Mohajerani"},
    {name = "Isabella Velicogna"},
    {email = "tsutterl@uw.edu"}
]
maintainers = [{ name = "gravity-toolkit contributors" }]
license = {file = "LICENSE"}
readme = "README.rst"

requires-python = "~=3.6"
dependencies = [
    "boto3",
    "future",
    "lxml",
    "matplotlib",
    "netCDF4",
    "numpy",
    "python-dateutil",
    "pyyaml",
    "scipy>=1.10.1",
]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://gravity-toolkit.readthedocs.io"
Documentation = "https://gravity-toolkit.readthedocs.io"
Repository = "https://github.com/tsutterley/gravity-toolkit"
Issues = "https://github.com/tsutterley/gravity-toolkit/issues"

[project.optional-dependencies]
doc = ["cartopy", "docutils", "fontconfig", "freetype", "graphviz", "ipympl", "markupsafe", "myst-nb", "numpydoc", "sphinx", "sphinx-argparse>=0.4", "sphinxcontrib-bibtex", "sphinx-design", "sphinx_rtd_theme"]
all = ["cartopy", "geoid-toolkit", "h5py", "jupyterlab", "jupyterlab_widgets", "notebook", "shapely"]
dev = ["flake8", "pytest>=4.6", "pytest-cov"]

[tool.setuptools.packages.find]
exclude = ["test*", "run*"]

[tool.pytest.ini_options]
minversion = "2.0"
norecursedirs = ".git"
addopts = "--verbose --capture=no"
python_files = [
    "test*.py"
]
testpaths = [
    "test"
]

[tool.coverage.run]
branch = true
source = [
    "gravity-toolkit",
    "test",
]
omit = [
    "setup.py",
    "conf.py",
    "access/*",
    "dealiasing/*",
    "geocenter/*",
    "mapping/*",
    "scripts/*",
    "utilities/*",
]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = false
