[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gravity-toolkit"
version = "1.2.5"
description = "Python tools for working with time-variable gravity fields"
keywords = [
    "GRACE",
    "GRACE-FO",
    "Gravity",
    "satellite geodesy",
    "spherical harmonics",
]

authors = [
    {name = "Tyler Sutterley"},
    {email = "tsutterl@uw.edu"}
]
maintainers = [
    { name = "gravity-toolkit contributors" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = "~=3.6"
dependencies = [
    "boto3",
    "future",
    "lxml",
    "matplotlib",
    "netCDF4",
    "numpy",
    "platformdirs",
    "python-dateutil",
    "pyyaml",
    "scipy>=1.10.1",
]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://gravity-toolkit.readthedocs.io"
Documentation = "https://gravity-toolkit.readthedocs.io"
Repository = "https://github.com/tsutterley/gravity-toolkit"
Issues = "https://github.com/tsutterley/gravity-toolkit/issues"

[project.optional-dependencies]
doc = ["docutils", "graphviz", "myst-nb", "numpydoc", "sphinx", "sphinx-argparse>=0.4", "sphinxcontrib-bibtex", "sphinx-design", "sphinx_rtd_theme"]
all = ["geoid-toolkit", "h5py", "jupyterlab", "jupyterlab_widgets", "notebook"]
aws = ["dask", "obstore", "pyarrow", "s3fs", "zarr>=3"]
dev = ["flake8", "pytest>=4.6", "pytest-cov", "pytest-xdist"]
map = ["cartopy", "gdal", "pyshp", "shapely"]

[tool.setuptools.packages.find]
exclude = ["test*", "run*"]

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".git"
addopts = "-n auto --verbose --capture=no -W ignore::UserWarning"
python_files = [
    "test*.py"
]
testpaths = [
    "test"
]

[tool.coverage.run]
branch = true
source = [
    "gravity-toolkit",
]
omit = [
    "setup.py",
    "access/*",
    "dealiasing/*",
    "doc/*",
    "geocenter/*",
    "mapping/*",
    "scripts/*",
    "test/*",
    "utilities/*",
]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.ruff]
line-length = 80
indent-width = 4
exclude = [
    ".git",
    ".pixi",
    "build",
    "run",
    "test",
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff-specific
    "RUF",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false

[tool.pixi.workspace]
name = "gravity-toolkit"
authors = ["gravity-toolkit contributors"]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
gravity-toolkit = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
all = { features = ["all"], solve-group = "default" }
aws = { features = ["all", "aws"], solve-group = "default" }
dev = { features = ["all", "dev", "map", "doc"], solve-group = "default" }
doc = { features = ["all", "doc"], solve-group = "default" }
map = { features = ["all", "map"], solve-group = "default" }

[tool.pixi.tasks.start]
cmd = "jupyter lab"
cwd = "doc/source/notebooks"
description = "Start JupyterLab in the notebooks directory"

[tool.pixi.tasks.export-env]
args = [ { "arg" = "flags", "default" = "" } ]
cmd = "pixi workspace export conda-environment {{ flags }} > environment.yml"
description = "Export workspace to a conda environment file" 

[tool.pixi.feature.doc.tasks.docs]
args = [ { "arg" = "builder", "default" = "html"}, { "arg" = "flags", "default" = "" } ]
cmd = "make {{ builder }} {{ flags }}"
cwd = "doc"
description = "Create documentation with sphinx"

[tool.pixi.feature.doc.tasks.clean-docs]
args = [ { "arg" = "builder", "default" = "html"}, { "arg" = "flags", "default" = "" } ]
cmd = "make clean && make {{ builder }} {{ flags }}"
cwd = "doc"
description = "Remove build artifacts and rebuild the documentation with sphinx"

[tool.pixi.feature.dev.tasks.test]
args = [ { "arg" = "flags", "default" = "" }, { "arg" = "test", "default" = "." } ]
cmd = "pytest {{ flags }} {{ test }}"
cwd = "test"
description = "Run the pytest suite"

[tool.pixi.feature.dev.tasks.coverage]
args = [ { "arg" = "flags", "default" = "" } ]
cmd = "pytest -n=0 --cov=gravity_toolkit --junitxml=pytest.xml --cov-report=xml {{ flags }} test"
description = "Run the pytest suite and create coverage reports"

[tool.pixi.feature.dev.tasks.lint]
args = [ { "arg" = "flags", "default" = "--select=E9,F63,F7,F82 --show-source" }, { "arg" = "test", "default" = "." } ]
cmd = "flake8 {{ test }} --count {{ flags }} --statistics --extend-exclude 'build/,run/,*.ipynb_checkpoints/,.pixi/'"
description = "Run flake8 to check for compilation errors"

[tool.pixi.dependencies]
boto3 = "*"
future = "*"
lxml = "*"
matplotlib-base = "*"
netcdf4 = "*"
numpy = "*"
platformdirs = "*"
python-dateutil = "*"
pyyaml = "*"
scipy = "*"

[tool.pixi.feature.all.dependencies]
geoid-toolkit = "*"
h5py = "*"
ipympl = "*"
ipywidgets = "*"
jupyterlab = "*"
jupyterlab_widgets = "*"
notebook = "*"

[tool.pixi.feature.aws.dependencies]
dask = "*"
obstore = "*"
pyarrow = "*"
s3fs = "*"
zarr = ">=3"

[tool.pixi.feature.dev.dependencies]
flake8 = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"

[tool.pixi.feature.doc.dependencies]
docutils = "*"
graphviz = "*"
markupsafe = "*"
myst-nb = "*"
numpydoc = "*"
sphinx = "*"
sphinx-argparse = "*"
sphinxcontrib-bibtex = "*"
sphinx-design = "*"
sphinx_rtd_theme = "*"

[tool.pixi.feature.map.dependencies]
cartopy = "*"
gdal = "*"
pyshp = "*"
shapely = "*"
